--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -84,7 +84,7 @@
                                                                         class="bi bi-house mx-2"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/download"><i style="font-size: 1.35em;" class="bi bi-box-arrow-in-down mx-2"></i></a>
+                    <a class="nav-link" href="/upload/document"><i style="font-size: 1.35em;" class="bi bi-box-arrow-in-down mx-2"></i></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/search"><i style="font-size: 1.35em;" class="bi bi-search mx-2"></i></a>
