--- a/src/main/resources/templates/upload-doc.html
+++ b/src/main/resources/templates/upload-doc.html
@@ -6,9 +6,7 @@
 
 <body class="text-center">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
+
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -73,19 +71,8 @@
     .bd-mode-toggle {
         z-index: 1500;
     }
-
-    .form-floating {
+    .form-floating{
         margin-bottom: 15px;
-
-    }
-
-    .container-buttons {
-        display: flex;
-        justify-content: space-around;
-    }
-
-    .w-10 {
-        width: 375px;
     }
 
 </style>
@@ -96,11 +83,10 @@
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="/"><i style="font-size: 1.35em;"
-                                                                                       class="bi bi-house mx-2"></i></a>
+                                                                                                                            class="bi bi-house mx-2"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/upload/document"><i style="font-size: 1.35em;"
-                                                                class="bi bi-box-arrow-in-down mx-2"></i></a>
+                    <a class="nav-link" href="/upload/document"><i style="font-size: 1.35em;" class="bi bi-box-arrow-in-down mx-2"></i></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/search"><i style="font-size: 1.35em;" class="bi bi-search mx-2"></i></a>
@@ -111,10 +97,28 @@
 </nav>
 
 
+
 <main class="form-signin w-50 m-auto">
-    <h1 class="mt-4" style="font-family: 'Comic Neue', cursive;">Произошла ошибка</h1>
-    <p style="font-size: 150pt;font-family: 'Comic Neue', cursive;">404</p>
-    <p class = "fs-2" style="font-family: 'Comic Neue', cursive;">Страница не найдена</p>
+    <form action="/upload" method="post" enctype="multipart/form-data">
+        <h1 class="h3 mb-3 mt-5 fw-bold">Загрузка нового документа</h1>
+
+        <div class="form-floating">
+            <input type="text" class="form-control" id="floatingInput" required placeholder="name@example.com">
+            <label for="floatingInput">Логин</label>
+        </div>
+        <div class="form-floating">
+                <input type="text" class="form-control" id="floatingName" required placeholder="Название">
+            <label for="floatingInput">Название</label>
+        </div>
+        <div class="form-floating">
+            <input type="text" class="form-control" id="floatingNumber" required placeholder="Входящий номер">
+            <label for="floatingInput">Входящий номер</label>
+        </div>
+        <div class="mb-3">
+            <input class="form-control" type="file" required accept="text/plain" id="formFile">
+        </div>
+        <button class="w-50 btn btn-lg btn-primary" type="submit">Загрузить</button>
+    </form>
 
 </main>
 
